tests/ui/field_projections/deny-manual-impl.old.stderr
error[E0322]: explicit impls for the `Field` trait are not permitted
  --> $DIR/deny-manual-impl.rs:11:1
   |
LL | unsafe impl Field for MyStruct {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl of `Field` not allowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0322`.
